Corrected pictures path

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <tbody>
       <tr>
-        <td><img src="images/profile-picture.jpg" alt="Nelbi Profile Picture" height="150" width="150"></td>
+        <td><img src="profile-picture.jpg" alt="Nelbi Profile Picture" height="150" width="150"></td>
         <td><h1>Nelbi El Bohemio Juarez</h1>
 <p><em>Full Stack Web Developer</em></p>
         <p>I´m starting my career on becoming a web developer, this looks like something I really do like and plan to spend a good amount of my time learning and improving my web development skills, I´m super excited and eager to become a full stack web
