Corrected image path

--- a/contact-details.html
+++ b/contact-details.html
@@ -8,7 +8,7 @@
 
 <body>
   <p>
-    Facebook <br> <a href="https://www.facebook.com/nelbi.juarez"><img src="images/Facebook.png" alt="Facebook Logo" width="150" height="150"></a>
+    Facebook <br> <a href="https://www.facebook.com/nelbi.juarez"><img src="Facebook.png" alt="Facebook Logo" width="150" height="150"></a>
     <br>
     Email Address: nelbijuarez@hotmail.com
   </p>
