--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <tbody>
       <tr>
         <td><img src="images/Profile-picture.jpg" alt="Nelbi Profile Picture" height="150" width="150"></td>
-        <td><h1>Nelbi El Bohemio Juarez</h1>
+        <td><h1>Nelbi Juarez</h1>
 <p><em>Full Stack Web Developer</em></p>
         
 
